finished the dsl readme changes